--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
     "dev": {
-        "allowed_origins": ["http://localhost:3000"],
+        "allowed_origins": ["*"],
         "file_expiration_days": 30,
         "max_file_size_mb": 100,
         "url_expiration_seconds": 3600,
